// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`netlifyConfig is updated when headers file is created by a build command 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/headers_command
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/headers_command

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/headers_command/netlify.toml

> Resolved config
  build:
    command: node command.js
    commandOrigin: config
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_command
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

[]

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

build.command from netlify.toml                               
────────────────────────────────────────────────────────────────

$ node command.js

> Updated config
  build:
    command: node command.js
    commandOrigin: config
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_command
    publishOrigin: default
  headers:
    - for: /external/path
      values:
        test: one
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(build.command completed in 1ms)
Build step duration: build.command completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────

[ { for: '/external/path', values: { test: 'one' } } ]

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig is updated when headers file is created by a build command and publish was changed 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/headers_command_dynamic
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/headers_command_dynamic

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/headers_command_dynamic/netlify.toml

> Resolved config
  build:
    command: node command.js
    commandOrigin: config
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_command_dynamic
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

[]
Netlify configuration property "build.publish" value changed to 'test'.

> Updated config
  build:
    command: node command.js
    commandOrigin: config
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_command_dynamic/test
    publishOrigin: inline
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

build.command from netlify.toml                               
────────────────────────────────────────────────────────────────

$ node command.js

> Updated config
  build:
    command: node command.js
    commandOrigin: config
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_command_dynamic/test
    publishOrigin: inline
  headers:
    - for: /external/path
      values:
        test: one
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(build.command completed in 1ms)
Build step duration: build.command completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────

[ { for: '/external/path', values: { test: 'one' } } ]

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig is updated when headers file is created by a plugin 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/headers_plugin
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/headers_plugin

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/headers_plugin/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_plugin
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

[]

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_plugin
    publishOrigin: default
  headers:
    - for: /external/path
      values:
        test: one
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────

[ { for: '/external/path', values: { test: 'one' } } ]

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig is updated when headers file is created by a plugin and publish was changed 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/headers_plugin_dynamic
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/headers_plugin_dynamic

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/headers_plugin_dynamic/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_plugin_dynamic
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

Netlify configuration property "build.publish" value changed to 'test'.

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_plugin_dynamic/test
    publishOrigin: inline
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────

[]
test

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_plugin_dynamic/test
    publishOrigin: inline
  headers:
    - for: /external/path
      values:
        test: one
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

./plugin (onPostBuild event)                                  
────────────────────────────────────────────────────────────────

[ { for: '/external/path', values: { test: 'one' } } ]

(./plugin onPostBuild completed in 1ms)
Build step duration: ./plugin onPostBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig is updated when redirects file is created by a build command 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/redirects_command
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_command

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_command/netlify.toml

> Resolved config
  build:
    command: node command.js
    commandOrigin: config
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_command
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

[]

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

build.command from netlify.toml                               
────────────────────────────────────────────────────────────────

$ node command.js

> Updated config
  build:
    command: node command.js
    commandOrigin: config
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_command
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin
  redirects:
    - from: /external/path
      to: /external/path

(build.command completed in 1ms)
Build step duration: build.command completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────

[
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  }
]

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig is updated when redirects file is created by a build command and publish was changed 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/redirects_command_dynamic
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_command_dynamic

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_command_dynamic/netlify.toml

> Resolved config
  build:
    command: node command.js
    commandOrigin: config
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_command_dynamic
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

[]
Netlify configuration property "build.publish" value changed to 'test'.

> Updated config
  build:
    command: node command.js
    commandOrigin: config
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_command_dynamic/test
    publishOrigin: inline
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

build.command from netlify.toml                               
────────────────────────────────────────────────────────────────

$ node command.js

> Updated config
  build:
    command: node command.js
    commandOrigin: config
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_command_dynamic/test
    publishOrigin: inline
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin
  redirects:
    - from: /external/path
      to: /external/path

(build.command completed in 1ms)
Build step duration: build.command completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────

[
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  }
]

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig is updated when redirects file is created by a plugin 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/redirects_plugin
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_plugin

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_plugin/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_plugin
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

[]

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_plugin
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin
  redirects:
    - from: /external/path
      to: /external/path

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────

[
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  }
]

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig is updated when redirects file is created by a plugin and publish was changed 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/redirects_plugin_dynamic
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_plugin_dynamic

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_plugin_dynamic/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_plugin_dynamic
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

Netlify configuration property "build.publish" value changed to 'test'.

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_plugin_dynamic/test
    publishOrigin: inline
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────

[]
test

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_plugin_dynamic/test
    publishOrigin: inline
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin
  redirects:
    - from: /external/path
      to: /external/path

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

./plugin (onPostBuild event)                                  
────────────────────────────────────────────────────────────────

[
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  }
]

(./plugin onPostBuild completed in 1ms)
Build step duration: ./plugin onPostBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig.headers can be assigned all at once 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/headers_all
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/headers_all

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/headers_all/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_all
    publishOrigin: default
  headers:
    - for: /external/path
      values:
        test: one
  headersOrigin: config
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

Netlify configuration property "headers" value changed to [
  { for: '/external/path', values: { test: 'one' } },
  { for: '/external/path', values: { test: 'two' } }
].

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_all
    publishOrigin: default
  headers:
    - for: /external/path
      values:
        test: one
    - for: /external/path
      values:
        test: two
  headersOrigin: inline
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────

[
  { for: '/external/path', values: { test: 'one' } },
  { for: '/external/path', values: { test: 'two' } }
]

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig.headers can be modified after headers file has been added 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/headers_after
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/headers_after

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/headers_after/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_after
    publishOrigin: default
  headers:
    - for: /external/path
      values:
        test: three
    - for: /external/path
      values:
        test: one
  headersOrigin: config
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

Netlify configuration property "headers" value changed to [
  { for: '/external/path', values: { test: 'three' } },
  { for: '/external/path', values: { test: 'one' } },
  { for: '/external/path', values: { test: 'two' } }
].

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_after
    publishOrigin: default
  headers:
    - for: /external/path
      values:
        test: three
    - for: /external/path
      values:
        test: one
    - for: /external/path
      values:
        test: two
  headersOrigin: inline
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

./plugin (onPostBuild event)                                  
────────────────────────────────────────────────────────────────

[
  { for: '/external/path', values: { test: 'three' } },
  { for: '/external/path', values: { test: 'one' } },
  { for: '/external/path', values: { test: 'two' } }
]

(./plugin onPostBuild completed in 1ms)
Build step duration: ./plugin onPostBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig.headers can be modified before headers file has been added 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/headers_before
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/headers_before

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/headers_before/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_before
    publishOrigin: default
  headers:
    - for: /external/path
      values:
        test: one
  headersOrigin: config
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

Netlify configuration property "headers" value changed to [
  { for: '/external/path', values: { test: 'one' } },
  { for: '/external/path', values: { test: 'two' } }
].

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_before
    publishOrigin: default
  headers:
    - for: /external/path
      values:
        test: one
    - for: /external/path
      values:
        test: two
  headersOrigin: inline
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────


> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/headers_before
    publishOrigin: default
  headers:
    - for: /external/path
      values:
        test: three
    - for: /external/path
      values:
        test: one
    - for: /external/path
      values:
        test: two
  headersOrigin: inline
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

./plugin (onPostBuild event)                                  
────────────────────────────────────────────────────────────────

[
  { for: '/external/path', values: { test: 'three' } },
  { for: '/external/path', values: { test: 'one' } },
  { for: '/external/path', values: { test: 'two' } }
]

(./plugin onPostBuild completed in 1ms)
Build step duration: ./plugin onPostBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig.redirects can be assigned all at once 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/redirects_all
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_all

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_all/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_all
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin
  redirects:
    - from: /external/path
      to: /external/path
  redirectsOrigin: config

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

Netlify configuration property "redirects" value changed to [
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  },
  { from: '/external/path', to: '/external/path' }
].

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_all
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin
  redirects:
    - from: /external/path
      to: /external/path
    - from: /external/path
      to: /external/path
  redirectsOrigin: inline

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────

[
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  },
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  }
]

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig.redirects can be modified after redirects file has been added 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/redirects_after
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_after

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_after/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_after
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin
  redirects:
    - from: /external/path
      to: /external/path
    - from: /external/path
      to: /external/path
  redirectsOrigin: config

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

Netlify configuration property "redirects" value changed to [
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  },
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  },
  { from: '/external/path', to: '/external/path' }
].

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_after
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin
  redirects:
    - from: /external/path
      to: /external/path
    - from: /external/path
      to: /external/path
    - from: /external/path
      to: /external/path
  redirectsOrigin: inline

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────

[
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  },
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  },
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  }
]

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;

exports[`netlifyConfig.redirects can be modified before redirects file has been added 1`] = `
"
Netlify Build                                                 
────────────────────────────────────────────────────────────────

> Version
  @netlify/build 1.0.0

> Flags
  debug: true
  repositoryRoot: packages/build/tests/mutate_headers_redirects/fixtures/redirects_before
  testOpts:
    pluginsListUrl: test
    silentLingeringProcesses: true

> Current directory
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_before

> Config file
  packages/build/tests/mutate_headers_redirects/fixtures/redirects_before/netlify.toml

> Resolved config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_before
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin
  redirects:
    - from: /external/path
      to: /external/path
  redirectsOrigin: config

> Context
  production

> Loading plugins
   - ./plugin@1.0.0 from netlify.toml

./plugin (onPreBuild event)                                   
────────────────────────────────────────────────────────────────

Netlify configuration property "redirects" value changed to [
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  },
  { from: '/external/path', to: '/external/path' }
].

> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_before
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin
  redirects:
    - from: /external/path
      to: /external/path
    - from: /external/path
      to: /external/path
  redirectsOrigin: inline

(./plugin onPreBuild completed in 1ms)
Build step duration: ./plugin onPreBuild completed in 1ms

./plugin (onBuild event)                                      
────────────────────────────────────────────────────────────────


> Updated config
  build:
    publish: packages/build/tests/mutate_headers_redirects/fixtures/redirects_before
    publishOrigin: default
  plugins:
    - inputs: {}
      origin: config
      package: ./plugin
  redirects:
    - from: /external/path
      to: /external/path
    - from: /external/path
      to: /external/path
    - from: /external/path
      to: /external/path
  redirectsOrigin: inline

(./plugin onBuild completed in 1ms)
Build step duration: ./plugin onBuild completed in 1ms

./plugin (onPostBuild event)                                  
────────────────────────────────────────────────────────────────

[
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  },
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  },
  {
    from: '/external/path',
    query: {},
    to: '/external/path',
    force: false,
    conditions: {},
    headers: {}
  }
]

(./plugin onPostBuild completed in 1ms)
Build step duration: ./plugin onPostBuild completed in 1ms

Netlify Build Complete                                        
────────────────────────────────────────────────────────────────

(Netlify Build completed in 1ms)
Build step duration: Netlify Build completed in 1ms"
`;
